--- a/House prices - Sulaiman Binkhamis/House Prices.ipynb
+++ b/House prices - Sulaiman Binkhamis/House Prices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ed5c7f7f",
+   "id": "dee0b532",
    "metadata": {},
    "source": [
     "### House Prices - Advanced Regression Techniques\n",
@@ -16,26 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8a3be90d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# House Prices - Advanced Regression Techniques\n",
-    "# Predict sales prices and practice feature engineering, RFs, and gradient boosting\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "211b6152",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Works with pycaret and pycaret 2\n",
-    "#!pip install pycaret==2.0\n",
-    "from pycaret.regression import *\n",
+    "# import libraries\n",
+    "\n",
+    "from pycaret.regression import * # used PyCaret = 2.3.4\n",
     "import pandas as pd"
    ]
   },
@@ -77,11 +65,13 @@
     }
    ],
    "source": [
+    "# load data\n",
+    "\n",
     "data = pd.read_csv(r'C:\\Users\\Sulaiman\\Downloads\\house-prices-advanced-regression-techniques\\train2.csv')\n",
     "\n",
     "test_data = pd.read_csv(r'C:\\Users\\Sulaiman\\Downloads\\house-prices-advanced-regression-techniques\\test.csv')\n",
     "\n",
-    "print(data.shape, test_data.shape)"
+    "print(data.shape, test_data.shape) # data shape"
    ]
   },
   {
@@ -718,7 +708,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# first 5 rows of the training set\n",
     "data.head()"
    ]
   },
@@ -1036,7 +1026,7 @@
     }
    ],
    "source": [
-    "# Ignoring features with high null values \n",
+    "# ignoring features with high null values \n",
     "\n",
     "demo = setup(data = data, target = 'SalePrice', \n",
     "                   ignore_features = ['Alley','PoolQC','MiscFeature','Fence','FireplaceQu','Utilities'],normalize = True,\n",
@@ -1281,7 +1271,7 @@
     }
    ],
    "source": [
-    "# Auto sort on R2 \n",
+    "# ranked by R2\n",
     "compare_models()"
    ]
   },
@@ -1417,7 +1407,7 @@
     }
    ],
    "source": [
-    "# Creating models for the best estimators \n",
+    "# creating models for the best estimators \n",
     "br = create_model('br')\n",
     "huber = create_model('huber')\n",
     "ridge = create_model('ridge')"
@@ -1555,7 +1545,7 @@
     }
    ],
    "source": [
-    "# Tuning the created models \n",
+    "# tuning the created models \n",
     "br = tune_model(br)\n",
     "huber = tune_model(huber)\n",
     "ridge = tune_model(ridge)"
@@ -1693,7 +1683,7 @@
     }
    ],
    "source": [
-    "# Blending models\n",
+    "# blending models\n",
     "blender = blend_models(estimator_list = [br, huber, ridge])"
    ]
   },
@@ -1704,7 +1694,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Finaliszing model for predictions \n",
+    "# finaliszing model for predictions \n",
     "model = finalize_model(blender)\n",
     "predictions = predict_model(model, data = test_data)"
    ]
@@ -1716,7 +1706,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generating CSV for Kaggle Submissions \n",
+    "# generating CSV for Kaggle Submissions \n",
     "sub = pd.DataFrame({\n",
     "        \"Id\": predictions['Id'],\n",
     "        \"SalePrice\": predictions['Label']\n",
@@ -1724,14 +1714,6 @@
     "\n",
     "sub.to_csv(r'C:\\Users\\Sulaiman\\Downloads\\house-prices-advanced-regression-techniques\\submission.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1b4b39a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
