--- a/House prices - Sulaiman Binkhamis/House Prices.ipynb
+++ b/House prices - Sulaiman Binkhamis/House Prices.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "### House Prices - Advanced Regression Techniques\n",
-    "##### Predict sales prices and practice feature engineering, RFs, and gradient boosting\n",
+    "##### Predict sales prices\n",
     "\n",
     "##### https://www.kaggle.com/c/house-prices-advanced-regression-techniques/\n",
     "\n",
